# sjq

./: .gitignore  README.md  cf-worker.js  pyproject.toml
php/: .credentials.example.php  .gitignore  README.md  cf-worker.js  composer.json  index.php
src/sjq/: __init__.py  __main__.py  cli.py
